--- a/index.html
+++ b/index.html
@@ -54,6 +54,29 @@
   -->
 
   <!-- ADD YOUR CODE HERE -->
+  <main>
+    <div class = "coffee-container">
+         <section class="coffee">
+          <div class="imge">
+          <img class ="img"src="./images/coffee.jpg"
+          alt="coffee" />
+          </div>
+          <div class="text">
+            <h4>Hot Drink</h4>
+          <h1>Perfect<br>Cappuccino<br></h1>
+
+
+          <p> Indulge in the creamy delight of<br>This exqusite coffee creation combines a shot of rich espresso with equal parts of steamed milk and silky microfoam, resulting in a delightful balance of flavor and texture. </p>
+          <h2>$4.99</h2>
+          <div class="btn-container">
+          <a class="btn"
+         href="#">BUY NOW</a>
+        </div>
+
+          </div>
+        </div>
+         </section>
+  </main>
 
 
   <!-- ADD YOUR CITATION HERE -->
