--- a/index.html
+++ b/index.html
@@ -62,16 +62,15 @@
           <h2>Perfect Cappuccino</h2>
           <p>Indulge in the creamy delight of our Perfect Cappuccino. This exquisite coffee creation combines a shot of rich espresso with equal parts of steamed milk and silky microfoam, resulting in a delightful balance of flavor and texture.</p>
           <div class="price">$4.99</div>
-          <button>BUY NOW</button>
+          <btn>BUY NOW</btn>
       </div>
   </div>
-         </section>
   </main>
+</body>
+</html>
 
 
-  <!-- ADD YOUR CITATION HERE -- ***https://chat.openai.com/>
+  <!-- ADD YOUR CITATION HERE -- *https://chat.openai.com/>
   
 
-</body>
 
-</html>
