--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <h2>Perfect Cappuccino</h2>
           <p>Indulge in the creamy delight of our Perfect Cappuccino. This exquisite coffee creation combines a shot of rich espresso with equal parts of steamed milk and silky microfoam, resulting in a delightful balance of flavor and texture.</p>
           <div class="price">$4.99</div>
-          <btn>BUY NOW</btn>
+          <button class="btn" href="#"> BUY NOW</button>
       </div>
   </div>
   </main>
