--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
 </html>
 
 
-  <!-- ADD YOUR CITATION HERE -- *https://chat.openai.com/>
+  <!-- ADD YOUR CITATION HERE -- https://chat.openai.com/c/46f24221-8e57-41eb-92ab-cd7c80fb68e5
+    https://developer.mozilla.org/en-US/docs/Web/CSS/image-resolution
+    https://www.geeksforgeeks.org/how-to-use-flex-to-shrink-an-image-in-css/
+    !-->
   
 
 
